extends Node3D

func _on_small_area_area_entered(area: Area3D) -> void:
	pass # Replace with function body.


func _on_small_area_area_exited(area: Area3D) -> void:
	pass # Replace with function body.


func _on_small_area_2_area_entered(area: Area3D) -> void:
	pass # Replace with function body.


func _on_small_area_2_area_exited(area: Area3D) -> void:
	pass # Replace with function body.


func _on_big_area_area_entered(area: Area3D) -> void:
	pass # Replace with function body.


func _on_big_area_area_exited(area: Area3D) -> void:
	pass # Replace with function body.


func _on_big_area_2_area_entered(area: Area3D) -> void:
	pass # Replace with function body.


func _on_big_area_2_area_exited(area: Area3D) -> void:
	pass # Replace with function body.
